crates/viewer_support/re_dataframe_ui/tests/integration/snapshots/integration__filter_tests__non_nullable_boolean_equals@false.snap
---
source: crates/viewer_support/re_dataframe_ui/tests/integration/filter_tests.rs
expression: test_results
---
TestResult {
    filter: NonNullableBoolean(
        IsFalse,
    ),
    field: Field {
        name: "column",
        data_type: Boolean,
    },
    unfiltered: BooleanArray
    [
      true,
      true,
      false,
    ],
    filtered: BooleanArray
    [
      false,
    ],
}
