crates/viewer_support/re_dataframe_ui/tests/integration/snapshots/integration__filter_tests__nullable_boolean_equals@nulls_is_not_true.snap
---
source: crates/viewer_support/re_dataframe_ui/tests/integration/filter_tests.rs
expression: test_results
---
TestResult {
    filter: NullableBoolean(
        NullableBooleanFilter(not IsTrue),
    ),
    field: Field {
        name: "column",
        data_type: Boolean,
        nullable: true,
    },
    unfiltered: BooleanArray
    [
      true,
      true,
      null,
      false,
    ],
    filtered: BooleanArray
    [
      null,
      false,
    ],
}
